Worked on user detail api
